# torch_practice

./: README.md  pyproject.toml
dynamic_autoencoder_tutorial/notebooks/: analysis.ipynb
static_autoencoder_tutorial/: run_static_autoencoder_experiment.py
static_autoencoder_tutorial/notebooks/: presentation_notebook.ipynb  writeup.ipynb
static_autoencoder_tutorial/src/: process_data.py
static_autoencoder_tutorial/src/helpers/: data.py  general.py  mnist_helpers.py  models.py  training.py
